[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/enemy.gd" type="Script" id=1]
[ext_resource path="res://images/human_brain.JPG" type="Texture" id=2]
[ext_resource path="res://characters/kill_button.gd" type="Script" id=3]
[ext_resource path="res://characters/slow_cards.gd" type="Script" id=4]
[ext_resource path="res://characters/character_info.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26.1048, 23.0275 )

[node name="Enemy" type="Area2D"]

position = Vector2( 2.97235, -11.8207 )
scale = Vector2( 2.41749, 2.41749 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( -29.6208, -25.7582 )
scale = Vector2( 0.0370584, 0.0326136 )
texture = ExtResource( 2 )
centered = false
flip_h = true
_sections_unfolded = [ "Offset", "Transform" ]

[node name="EnemyShape" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Name" type="Label" parent="EnemyShape" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -22.0
margin_top = 29.0
margin_right = 21.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "baddie"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HP" type="Label" parent="EnemyShape" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -21.0
margin_top = 46.0
margin_right = 19.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "hp: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors" ]

[node name="HealthBar" type="ProgressBar" parent="EnemyShape" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = 66.0
margin_right = 27.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Percent" ]

[node name="KillButton" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -22.0
margin_top = 93.0
margin_right = 42.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "kill"
flat = false
align = 1
script = ExtResource( 3 )

[node name="SlowCards" type="HBoxContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = -47.0
margin_right = 55.0
margin_bottom = -7.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 4 )

[node name="CharacterInfo" parent="." index="4" instance=ExtResource( 5 )]

visible = false
position = Vector2( 48.3514, 22.8564 )
scale = Vector2( 0.94344, 1.48904 )
_sections_unfolded = [ "Transform", "Visibility" ]


